Check internet permissions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -146,11 +146,9 @@
     <string name="descripci_n">Descripción</string>
     <string name="recuperar_contrase_a">Recuperar Contraseña</string>
     <string name="no_registrado_registrate_aqu">¿No registrado? Registrate aquí</string>
-    <string name="contrase_a">Contraseña</string>
-    <string name="correo_electr_nico">Correo electrónico</string>
     <string name="iniciar_sesi_n">Iniciar sesión</string>
-    <string name="guardar">Guardar</string>
     <string name="edad_aproximada">Edad aproximada</string>
+    <string name="email">Email</string>
 
 
 </resources>
